Readme Updated, Footer zindex-1, container filler added, unused var rem

--- a/characterCreator/index.html
+++ b/characterCreator/index.html
@@ -224,7 +224,7 @@
   <!--==== START Background Selection ====-->
   <div ng-if="true">
     <div class="container">
-      <div class="row  mt-4 mb-5">
+      <div class="row  mt-4 mb-3">
         <div class="input-group">
           <div class="input-group-prepend">
             <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Background</button>
@@ -248,8 +248,85 @@
   </div> <!-- End of NG-IF -->
   <!--==== END Background Selection ====-->
 
+  <!--==== START Class/Multi-Class Feature Selection ====-->
+  <div ng-if="true">
+    <div class="container">
+      <div class="row  mt-4 mb-3">
 
+      </div> <!-- End of Row -->
+    </div> <!-- End of Container -->
+  </div> <!-- End of NG-IF -->
+  <!--==== END Class/Multi-Class Feature Selection ====-->
 
+  <!--==== START Class/Multi-Class Feature Selection ====-->
+  <div ng-if="true">
+    <div class="container">
+      <div class="row  mt-4 mb-3">
+
+      </div> <!-- End of Row -->
+    </div> <!-- End of Container -->
+  </div> <!-- End of NG-IF -->
+  <!--==== END Class/Multi-Class Feature Selection ====-->
+
+  <!--==== START Skills Selection ====-->
+  <div ng-if="true">
+    <div class="container">
+      <div class="row  mt-4 mb-3">
+
+      </div> <!-- End of Row -->
+    </div> <!-- End of Container -->
+  </div> <!-- End of NG-IF -->
+  <!--==== END Skills Selection ====-->
+
+  <!--==== START Hit Dice Selection ====-->
+  <div ng-if="true">
+    <div class="container">
+      <div class="row  mt-4 mb-3">
+
+      </div> <!-- End of Row -->
+    </div> <!-- End of Container -->
+  </div> <!-- End of NG-IF -->
+  <!--==== END Hit Dice Selection ====-->
+
+  <!--==== START Spells Selection ====-->
+  <div ng-if="true">
+    <div class="container">
+      <div class="row  mt-4 mb-3">
+
+      </div> <!-- End of Row -->
+    </div> <!-- End of Container -->
+  </div> <!-- End of NG-IF -->
+  <!--==== END Spells Selection ====-->
+
+  <!--==== START Druid Wild-Shape Selection ====-->
+  <div ng-if="true">
+    <div class="container">
+      <div class="row  mt-4 mb-3">
+
+      </div> <!-- End of Row -->
+    </div> <!-- End of Container -->
+  </div> <!-- End of NG-IF -->
+  <!--==== END Druid Wild-Shape Selection ====-->
+
+  <!--==== START Equipment Selection ====-->
+  <div ng-if="true">
+    <div class="container">
+      <div class="row  mt-4 mb-3">
+
+      </div> <!-- End of Row -->
+    </div> <!-- End of Container -->
+  </div> <!-- End of NG-IF -->
+  <!--==== END Equipment Selection ====-->
+
+  <!--==== START Background Story Selection ====-->
+  <div ng-if="true">
+    <div class="container">
+      <div class="row  mt-4 mb-3">
+
+      </div> <!-- End of Row -->
+    </div> <!-- End of Container -->
+  </div> <!-- End of NG-IF -->
+  <!--==== END Background Story Selection ====-->
 
   <!--==== START Modal EE ====-->
   <div class="modal fade" id="eModal" tabindex="-1" role="dialog" aria-labelledby="eModalCenterTitle" aria-hidden="true">
