Partial Class Features Table(s)

--- a/characterCreator/index.html
+++ b/characterCreator/index.html
@@ -251,17 +251,36 @@
   <!--==== START Class/Multi-Class Feature Selection ====-->
   <div ng-if="true">
     <div class="container">
-      <div class="row  mt-4 mb-3">
+      <div >
 
-      </div> <!-- End of Row -->
-    </div> <!-- End of Container -->
-  </div> <!-- End of NG-IF -->
-  <!--==== END Class/Multi-Class Feature Selection ====-->
+        <div class="row  mt-4 mb-3" ng-repeat="class in data.char.class">
+          <div class="col-sm-12">
+            <h2>{{class.name}}</h2>
+          </div>
+          <div class="col-sm-8 classFeatures">
+            <table class="table-sm table-striped table-hover classFeatures">
+              <tbody  class="">
+                <tr ng-repeat="(key, level) in class.classFeatures | limitTo:class.level" ng-click="">
+                  <td>Level {{key+1}}</td>
+                  <td ng-repeat="feature in level">{{feature.name}}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="col-sm-4 classFeatures">
+            <table class="table-sm table-striped table-hover classFeatures">
+              <tbody  class="">
+                <tr ng-repeat="(key, row) in class.classTableGroups[1].rows | limitTo:class.level " ng-click="">
+                  <td>Level {{key+1}}</td>
+                  <td ng-repeat="entry in row track by $index">{{entry}}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
 
-  <!--==== START Class/Multi-Class Feature Selection ====-->
-  <div ng-if="true">
-    <div class="container">
-      <div class="row  mt-4 mb-3">
+
+
+        </div>
 
       </div> <!-- End of Row -->
     </div> <!-- End of Container -->
